# orangenoteGUI

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md  project.yml
.github/workflows/: release.yml
OrangeNote/: Info.plist  OrangeNoteApp.swift
OrangeNote/Bridge/: FFITypes.swift  OrangeNote-Bridging-Header.h  OrangeNoteFFI.swift
OrangeNote/Helpers/: LocalizationHelper.swift
OrangeNote/Models/: AppSettings.swift  AppState.swift  ExportFormat.swift  GitHubRelease.swift  TranscriptionResult.swift  TranscriptionSegment.swift  TranslatedResult.swift  UpdateStatus.swift  WhisperModel.swift
OrangeNote/Resources/en.lproj/: Localizable.strings
OrangeNote/Scripts/: build_rust.sh
OrangeNote/Services/: NotificationService.swift  TranscriptionImportService.swift  TranslationService.swift  UpdateCheckerService.swift
OrangeNote/ViewModels/: ExportViewModel.swift  ModelManagerViewModel.swift  TranscriptionViewModel.swift  TranslationViewModel.swift  UpdateCheckerViewModel.swift
OrangeNote/Views/: ContentView.swift  ExportView.swift  ModelManagerView.swift  ResultsView.swift  SettingsView.swift  TranscriptionView.swift  UpdateAlertView.swift
docs/: ARCHITECTURE.md  DOC_INDEX.md
orangenote-core/: Cargo.toml  build.rs
orangenote-core/src/: lib.rs
orangenote-core/src/infrastructure/: mod.rs
orangenote-core/src/infrastructure/audio/: chunk.rs  decoder.rs  mod.rs  processor.rs
orangenote-core/src/infrastructure/transcription/: mod.rs
orangenote-core/src/infrastructure/transcription/whisper/: context.rs  ffi.rs  merger.rs  mod.rs  model_manager.rs  transcriber.rs
orangenote-ffi/: Cargo.toml  cbindgen.toml
orangenote-ffi/include/: orangenote_ffi.h
orangenote-ffi/src/: lib.rs
plans/: v0.1.5-architecture.md
reference/: orangenote-cli.rs
scripts/: create-release.sh
(+7 files in other folders)
